@@ -39,13 +39,6 @@
 	- http://virtualmin.com/node/32082
 	- https://sourceforge.net/p/webadmin/bugs/4350/
 
- - Externally visible port, for use in URLs when behind proxy
-	- http://virtualmin.com/node/32366
-	- template inheritance
-	- template help pages
-	- common function for URLs
-	- CHANGELOG
-
  - Convert mail list subjects to unicode
 	- Unicode::MapUTF8
 	- Only when UTF-8 is enabled
