@@ -1,0 +1,9 @@
+<header>External port number for SSL virtual hosts</header>
+
+This setting can be used to change the port number Virtualmin uses in URLs
+that reference domains created from this template. It can be useful if your
+system has a proxy or cache in front of it listening on port 443, and
+Virtualmin has been configured to create Apache virtual hosts on a different
+port. <p>
+
+<footer>
