@@ -1601,7 +1601,7 @@ newweb_statsedit=Allow editing of Webalizer schedule?
 newweb_estats=Missing or invalid statistics subdirectory
 newweb_port=Port number for virtual hosts
 newweb_sslport=Port number for SSL virtual hosts
-newweb_urlport=External port number for SSL virtual hosts
+newweb_urlport=External port number for virtual hosts
 newweb_urlsslport=External port number for SSL virtual hosts
 newweb_sameport=Same as real port
 newweb_eport=Missing or invalid port number for virtual hosts
