@@ -8230,6 +8230,8 @@ push(@rv, { 'id' => 0,
 	    'web_stats_noedit' => $config{'stats_noedit'},
 	    'web_port' => $default_web_port,
 	    'web_sslport' => $default_web_sslport,
+	    'web_urlport' => $config{'web_urlport'},
+	    'web_urlsslport' => $config{'web_urlsslport'},
 	    'web_alias' => $config{'alias_mode'},
 	    'web_webmin_ssl' => $config{'webmin_ssl'},
 	    'web_usermin_ssl' => $config{'usermin_ssl'},
@@ -8505,6 +8507,8 @@ if ($tmpl->{'id'} == 0) {
 	$config{'stats_noedit'} = $tmpl->{'web_stats_noedit'};
 	$config{'web_port'} = $tmpl->{'web_port'};
 	$config{'web_sslport'} = $tmpl->{'web_sslport'};
+	$config{'web_urlport'} = $tmpl->{'web_urlport'};
+	$config{'web_urlsslport'} = $tmpl->{'web_urlsslport'};
 	$config{'webmin_ssl'} = $tmpl->{'web_webmin_ssl'};
 	$config{'usermin_ssl'} = $tmpl->{'web_usermin_ssl'};
 	$config{'web_webmail'} = $tmpl->{'web_webmail'};
